@@ -2,10 +2,8 @@
 \alias{plot.data.frame}
 \title{Plot Method for Data Frames}
 \description{
-  \code{plot.data.frame}, a method of the \code{\link{plot}} generic,
-  uses \code{\link{stripchart}} for \emph{one} variable,
-  \code{\link{plot.default}} (scatterplot) for \emph{two} variables, and
-  \code{\link{pairs}} (scatterplot matrix) otherwise.
+  \code{plot.data.frame}, a method for the \code{\link{plot}} generic.
+  It is designed for a quick look at numeric data frames.
 }
 \usage{
 \method{plot}{data.frame}(x, \dots)
@@ -16,11 +14,19 @@
     \code{\link{plot.default}} or \code{\link{pairs}}.}
 }
 \details{
-  This is intended for data frames with \emph{numeric} columns, and
-  first calls \code{\link{data.matrix}} to convert the data frame to a
-  numeric matrix.  That may well be inappropriate: for example numerical
-  conversion of dates will lose their special meaning and a warning will
-  be given.
+  This is intended for data frames with \emph{numeric} columns. For more
+  than two columns it first calls \code{\link{data.matrix}} to convert
+  the data frame to a numeric matrix and then calls \code{\link{pairs}}
+  to produce a scatterplot matrix).  This can fail and may well be
+  inappropriate: for example numerical conversion of dates will lose
+  their special meaning and a warning will be given.
+
+  For a two-column data frame it plots the second column against the
+  first by the most appropriate method for the first column.
+  
+  For a single numeric column it uses \code{\link{stripchart}}, and for
+  other single-column data frames tries to find a plot method for the
+  single column.
 }
 \seealso{
   \code{\link{data.frame}}
@@ -29,6 +35,10 @@
 plot(OrchardSprays[1], method="jitter")
 plot(OrchardSprays[c(4,1)])
 plot(OrchardSprays)
+
+plot(iris)
+plot(iris[5:4])
+plot(women)
 }
 \keyword{hplot}
 \keyword{methods}
